--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -19,7 +19,9 @@ jobs:
       # Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
-        run: | 
+
+      - name: Debug
+        run: |
           echo ${{ secrets.AWS_ACCESS_KEY_ID }}
           echo ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
