--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -42,10 +42,11 @@ jobs:
           aws-region: eu-west-2
 
       # Deploy the CDK application
-      - name: Deploy CDK
+      - name: Deploy CDK Stack using Docker
+        uses: docker://amazon/aws-cdk:latest
         env:
           CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
           CDK_DEFAULT_REGION: eu-west-2
-        run: |
-          echo "Deploying to environment: dev"
-          cdk deploy --all --require-approval never --context environment=branch_name=${{ github.ref_name }}
+        with:
+          args: cdk deploy --all --require-approval never --context environment=branch_name=${{ github.ref_name }}
+
